@@ -10,6 +10,8 @@ test_that("brm produces expected errors", {
                "No non-linear parameters specified")
   expect_error(brm(bf(y ~ a, a ~ 1, nl = TRUE), family = acat()),
                "Non-linear formulas are not yet allowed for this family")
+  expect_error(brm(bf(y ~ 0 + a), dat, family = cumulative()),
+               "Cannot remove the intercept in an ordinal model")
   expect_error(brm(y ~ mono(1), dat),
                "No variable supplied to function 'mo'")
   expect_error(brm(bf(y | se(sei) ~ x, sigma ~ x), dat),
